# ComfyUI-DeepSeek_R1-Chat

./: README.md  __init__.py  config.json  deepseek_chat_node.py  pyproject.toml
workflow/: DeepSeek API + Florence.json  DeepSeek workflow basic.json
